# radar-mvp-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.js  jsonTest.json  jsonTest.txt  package-lock.json  package.json  process_simple_sfcw_radar_scan.py  radar_redis_driver.cpp  requirements.txt  s3sync.py  scan_worker.py  scan_worker_job.py  simple_sfcw_radar.py  simple_sfcw_radar_scan.py  simple_sfcw_radar_sweep.py  start.sh  tile_plots.py
etc/: client.js  client.py  rc.local
examples/: scratch.ipynb
process_scan/: aio_simple_sfcw_radar_scan.py  dump.rdb  message.json  mock_radar_service.js  process_simple_sfcw_radar_scan.py  radar_data_pipeline.sh  s3sync.py  scan_worker_job.py  setup.sh
radar/: arraytools.py  client.py  digital_backend.py  makeimage.py  rf_source.py  signal_processing.py  signal_processing_alan.py  signaltools.py
